--- a/nextflow.config
+++ b/nextflow.config
@@ -56,7 +56,7 @@ profiles {
   }
 
   'apptainer' {
-    process.container = '/shared/homes/162557/home/uts/speedx/RNA-seq-2/apptainerdef/speedx-rnaseq.sif'
+    process.container = '$baseDir/apptainerdef/speedx-rnaseq.sif'
     // process.executor = 'pbspro'
     apptainer.enabled = true
   }
