add scratch description

--- a/nextflow.config
+++ b/nextflow.config
@@ -59,6 +59,7 @@ profiles {
     process.container = '$baseDir/apptainerdef/speedx-rnaseq.sif'
     // process.executor = 'pbspro'
     apptainer.enabled = true
+    process.scratch = true
   }
 
   'singularity' {
