fix path of image

--- a/nextflow.config
+++ b/nextflow.config
@@ -56,8 +56,8 @@ profiles {
   }
 
   'apptainer' {
-    process.container = '$baseDir/apptainerdef/speedx-rnaseq.sif'
-    // process.executor = 'pbspro'
+    process.container = "$baseDir/apptainerdef/speedx-rnaseq.sif"
+    process.executor = 'pbspro'
     apptainer.enabled = true
     process.scratch = true
   }
