update scratch path

--- a/nextflow.config
+++ b/nextflow.config
@@ -57,9 +57,9 @@ profiles {
 
   'apptainer' {
     process.container = "$baseDir/apptainerdef/speedx-rnaseq.sif"
-    process.executor = 'pbspro'
+    process.stageOutMode = 'move'
+    process.scratch = '/scratch/u162557'
     apptainer.enabled = true
-    process.scratch = true
   }
 
   'singularity' {
